classDiagram
    %% ═══════════════════════════════════════════════════════════
    %% BACKEND — Records
    %% ═══════════════════════════════════════════════════════════

    class UniquenessRequest {
        <<record>>
        +businessName: String
        +categories: List~String~
        +coreServices: List~String~
        +description: String
        +uvp: String
    }

    class UniquenessResponse {
        <<record>>
        +overallScore: int
        +semanticsScore: int
        +categoryScore: int
        +descriptionFeedback: String
        +categoryFeedback: String
    }

    %% ═══════════════════════════════════════════════════════════
    %% BACKEND — Controller & Service
    %% ═══════════════════════════════════════════════════════════

    class ClassificationController {
        <<controller>>
        -ai: AIInferenceGatewayService
        +uniqueness(UniquenessRequest) UniquenessResponse
    }

    class AIInferenceGatewayService {
        <<service>>
        -client: WebClient
        -timeout: Duration
        +computeUniqueness(Map) Map
    }

    %% ═══════════════════════════════════════════════════════════
    %% RELATIONSHIPS
    %% ═══════════════════════════════════════════════════════════

    ClassificationController --> AIInferenceGatewayService : computeUniqueness
    ClassificationController ..> UniquenessRequest : consumes
    ClassificationController ..> UniquenessResponse : produces
